Fixed spacing

--- a/btc_html/css/small.css
+++ b/btc_html/css/small.css
@@ -285,6 +285,11 @@ body h3 {
 }
 
 
+.header-container{
+	display: flex;
+	justify-content: space-between;
+}
+
 .img-txt-container-header {
 	display: flex;
 	align-items: center;
@@ -586,14 +591,14 @@ a{text-decoration:none;color:#FFFFFF;}
 .menu-wrap{
 	position:fixed;
 	top:0;
-	left:0;
+	right:0;
 	z-index:1;
 }
 
 .menu-wrap .toggler{
 	position:absolute;
 	top:0;
-	left:0;
+	right:0;
 	z-index:2;
 	cursor:pointer;
 	width:50px;
@@ -604,7 +609,7 @@ a{text-decoration:none;color:#FFFFFF;}
 .menu-wrap .hamburger{
 	position:absolute;
 	top:0;
-	left:0;
+	right:0;
 	z-index:1;
 	width:60px;
 	height:60px;
@@ -657,7 +662,7 @@ a{text-decoration:none;color:#FFFFFF;}
 .menu-wrap .menu{
 	position:fixed;
 	top:0;
-	left:0;
+	right:0;
 	width:100%;
 	height:100%;
 	visibility:hidden;
